asg_v3.0/sg.tf
resource "aws_security_group" "main" {
  name        = replace(local.name, "rtype", "main-sg")
  description = "this is a security group for my instance"
  vpc_id      = "vpc-02895d4cca9d04a65"
  tags        = merge(local.common_tags, { Name = replace(local.name, "rtype", "main-sg") })
}
resource "aws_security_group_rule" "main_ingress_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.main.id
}
resource "aws_security_group_rule" "main_ingress_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.main.id
}
resource "aws_security_group_rule" "main_egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.main.id
}
